Fix accessibility and SEO problems
1. Elements must meet minimum color contrast ratio thresholds
2. Heading levels should only increase by one
3. Alternative text of images should not be repeated as text
4. All page content should be contained by landmarks
5. Add support for tab key navigation on buttons
6. Fix Tab key navigation on tablets
7. Add aria-label attributes for better screen reader support
8. Add dark background detection to navbar with adaptive text and menu icon colors
9. Replace jpg images to webp
10. Add meta information to HTML head
Add automatic current year update in footer
Move Home section text into database

Signed-off-by: ek <elzbieta.kolcz.13@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@
     font-family: "Work Sans", sans-serif;
   }
 
-  h3 {
-    @apply text-xl font-PlayfairDisplay  leading-5  pb-1;
+  h2 {
+    @apply text-xl font-WorkSans font-medium leading-5  pb-1;
   }
 
-  h4 {
+  h3 {
     @apply font-bold;
   }
 }
